--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_painter: ^1.0.1
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
