--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: aicycle_insurance
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -12,11 +12,20 @@ dependencies:
     sdk: flutter
   flutter_painter: ^1.0.1
   cached_network_image: ^3.2.0
+  flutter_svg: ^1.0.0
+  get: ^4.6.1
 
 dev_dependencies:
+  build_runner: ^2.1.2
+  flutter_gen_runner: ^3.1.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+
+# Flutter gen
+flutter_gen:
+  integrations:
+    flutter_svg: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
