--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_painter: ^1.0.1
-  cached_network_image: ^3.2.0
-  flutter_svg: ^1.0.0
-  get: ^4.6.1
+  flutter_painter: 1.0.1
+  cached_network_image: 3.2.0
+  flutter_svg: 1.0.0
+  get: 4.6.1
+  image_picker: 0.8.4
+  http: 0.13.3
+  mime: 1.0.2
 
 dev_dependencies:
   build_runner: ^2.1.2
