--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   image_picker: 0.8.4
   http: 0.13.3
   mime: 1.0.2
+  photo_view: 0.13.0
 
 dev_dependencies:
   build_runner: ^2.1.2
