--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   http: 0.13.3
   mime: 1.0.2
   photo_view: 0.13.0
+  path_provider: 2.0.4
+  flutter_image_compress: 1.1.0
+  camerawesome: 0.3.0
 
 dev_dependencies:
   build_runner: ^2.1.2
