--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -26,6 +26,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Access to your cameta to take car damage photos.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Access to your microphone to take car damage videos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to your photo library to upload car damage photos.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
