--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_painter: 1.0.1
-  cached_network_image: 3.2.0
-  flutter_svg: 1.0.0
-  get: 4.6.1
-  image_picker: 0.8.4
-  http: 0.13.3
-  mime: 1.0.2
-  photo_view: 0.13.0
-  path_provider: 2.0.4
-  flutter_image_compress: 1.1.0
-  camerawesome: 0.3.0
+  flutter_painter: ^1.0.1
+  cached_network_image: ^3.2.0
+  flutter_svg: ^1.0.0
+  get: ^4.6.1
+  image_picker: ^0.8.4
+  http: ^0.13.3
+  mime: ^1.0.2
+  photo_view: ^0.13.0
+  path_provider: ^2.0.4
+  flutter_image_compress: ^1.1.0
+  camerawesome: ^0.3.0
+  path: ^1.8.0
 
 dev_dependencies:
   build_runner: ^2.1.2
