--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,28 +4,28 @@ version: 0.0.2
 homepage: https://github.com/Aicycle-Insurance/aicycle_insurance_plugin
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_painter: ^1.0.1
-  cached_network_image: ^3.2.0
-  flutter_svg: ^1.0.0
-  get: ^4.6.1
-  image_picker: ^0.8.4
-  http: ^0.13.3
-  mime: ^1.0.2
-  photo_view: ^0.13.0
-  path_provider: ^2.0.4
-  flutter_image_compress: ^1.1.0
-  camerawesome: ^0.3.0
-  path: ^1.8.0
+  # flutter_painter: ^0.0.1
+  cached_network_image: ^2.4.1
+  flutter_svg: ^0.18.1
+  get: ^3.26.0
+  image_picker: ^0.6.7+22
+  http: ^0.12.2
+  mime: ^0.9.7
+  photo_view: ^0.10.3
+  path_provider: ^1.6.28
+  flutter_image_compress: ^0.7.0
+  camerawesome: ^0.2.2
+  path: ^1.7.0
 
 dev_dependencies:
-  build_runner: ^2.1.2
-  flutter_gen_runner: ^3.1.1
+  build_runner: ^1.11.0
+  flutter_gen_runner: ^2.0.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
