--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_image_compress: ^1.1.0
   camerawesome: ^0.3.0
   path: ^1.8.0
+  flutter_phosphor_icons: ^0.0.1+6
+  image: ^3.0.1
 
 dev_dependencies:
   build_runner: ^2.1.2
