--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path: ^1.8.0
   flutter_phosphor_icons: ^0.0.1+6
   image: ^3.0.1
+  nanoid: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.1.2
