--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^2.5.1
-  flutter_svg: ^0.18.1
-  get: ^3.26.0
+  flutter_svg: 0.19.3
+  get: 3.26.0
   image_picker: ^0.6.7+22
   http: ^0.12.2
   mime: ^0.9.7
@@ -24,15 +24,17 @@ dependencies:
   flutter_phosphor_icons: ^0.0.1+3
   image: ^2.1.19
   nanoid: ^0.1.0
+  flutter_painter: 1.0.1
 
 dev_dependencies:
-  build_runner: ^2.1.2
-  flutter_gen_runner: ^3.1.1
+  build_runner: 1.11.1+1
+  flutter_gen_runner: 2.0.3
   flutter_test:
     sdk: flutter
   # flutter_lints: ^1.0.0
-  flutter_painter: ^0.0.1
 
+dependency_overrides:
+  flutter_painter: 1.0.1
 
 # Flutter gen
 flutter_gen:
