--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^2.5.1
-  flutter_svg: 0.19.3
+  flutter_svg: 0.19.0
   get: 3.26.0
   image_picker: ^0.6.7+22
   http: ^0.12.2
@@ -24,7 +24,7 @@ dependencies:
   flutter_phosphor_icons: ^0.0.1+3
   image: ^2.1.19
   nanoid: ^0.1.0
-  flutter_painter: 1.0.1
+#  flutter_painter: 0.0.1
 
 dev_dependencies:
   build_runner: 1.11.1+1
@@ -33,8 +33,6 @@ dev_dependencies:
     sdk: flutter
   # flutter_lints: ^1.0.0
 
-dependency_overrides:
-  flutter_painter: 1.0.1
 
 # Flutter gen
 flutter_gen:
