--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,18 @@ dependencies:
   flutter_phosphor_icons: ^0.0.1+3
   image: ^2.1.19
   nanoid: ^0.1.0
-#  flutter_painter: 0.0.1
+  my_painter:
+    git:
+      url: https://github.com/tungakanui/painter_flutter_1
+      ref: master
+
 
 dev_dependencies:
   build_runner: 1.11.1+1
   flutter_gen_runner: 2.0.3
   flutter_test:
     sdk: flutter
+
   # flutter_lints: ^1.0.0
 
 
