--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,24 +10,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^2.5.1
+  cached_network_image: 2.5.1
   flutter_svg: 0.19.0
   get: 3.26.0
-  image_picker: ^0.6.7+22
-  http: ^0.12.2
-  mime: ^0.9.7
-  photo_view: ^0.10.3
-  path_provider: ^1.6.28
+  image_picker: 0.6.7+22
+  http: 0.12.2
+  mime: 0.9.7
+  photo_view: 0.10.3
+  path_provider: 1.6.28
   flutter_image_compress: ^0.7.0
-  camerawesome: ^0.2.2
+  camerawesome: 0.2.2
   path: ^1.7.0
   flutter_phosphor_icons: ^0.0.1+3
-  image: ^2.1.19
+  image: 2.1.19
   nanoid: ^0.1.0
-  my_painter:
-    git:
-      url: https://github.com/tungakanui/painter_flutter_1
-      ref: master
 
 
 dev_dependencies:
