--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: aicycle_insurance
+name: aicycle_insurance_non_null_safety
 description: Flutter plugin to add AICycle Insurance Widget inside your project.
-version: 0.0.4
+version: 0.0.1
 homepage: https://github.com/Aicycle-Insurance/aicycle_insurance_plugin
 
 environment:
@@ -10,25 +10,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: 2.5.1
-  flutter_svg: 0.19.0
-  get: 3.26.0
-  image_picker: 0.6.7+22
-  http: 0.12.2
-  mime: 0.9.7
-  photo_view: 0.10.3
-  path_provider: 1.6.28
+  cached_network_image: ^2.5.1
+  flutter_svg: ^0.19.0
+  get: ^3.26.0
+  image_picker: ^0.6.7+22
+  http: ^0.12.2
+  mime: ^0.9.7
+  photo_view: ^0.10.3
+  path_provider: ^1.6.28
   flutter_image_compress: ^0.7.0
-  camerawesome: 0.2.2
+  camerawesome: ^0.2.2
   path: ^1.7.0
   flutter_phosphor_icons: ^0.0.1+3
-  image: 2.1.19
+  image: ^2.1.19
   nanoid: ^0.1.0
+  vector_math: ^2.1.0-nullsafety.3
 
 
 dev_dependencies:
   build_runner: 1.11.1+1
-  flutter_gen_runner: 2.0.3
+  flutter_gen_runner: ^2.0.3
   flutter_test:
     sdk: flutter
 
