--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
+.fvm/
+.idea/
+.flutter-plugins
+.flutter-plugins-dependencies
+example/android/*
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
