update new tool

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   nanoid: ^0.1.0
   vector_math: ^2.1.0-nullsafety.3
   image_gallery_saver: ^1.6.8
+  flutter_painter:
+    path: ../flutter_painter
 
 # dependency_overrides:
 #   gallery_saver: ^2.0.3
