--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
   vector_math: ^2.1.0-nullsafety.3
   image_gallery_saver: ^1.6.8
   flutter_painter:
-    path: ../flutter_painter
+    git:
+      url: https://github.com/quyenpham6841/flutter_painter
+      ref: master
+    # path: ../flutter_painter
 
 # dependency_overrides:
 #   gallery_saver: ^2.0.3
