--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   photo_view: ^0.13.0
   path_provider: ^2.0.4
   flutter_image_compress: ^1.1.0
-  camerawesome: ^0.3.0
+  camerawesome: 0.3.0
   path: ^1.8.0
   flutter_phosphor_icons: ^0.0.1+6
   image: ^3.0.1
