--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: aicycle_insurance_non_null_safety
 description: Flutter plugin to add AICycle Insurance Widget inside your project.
-version: 0.1.2
+version: 0.1.4
 homepage: https://github.com/Aicycle-Insurance/aicycle_insurance_plugin
 
 environment:
@@ -27,6 +27,7 @@ dependencies:
   vector_math: ^2.1.0-nullsafety.3
   image_gallery_saver: ^1.6.8
   collection: ^1.14.13
+  intl: ^0.16.1
 
 dev_dependencies:
   build_runner: 1.11.1+1
